syntax = "proto3";

package axorith.contracts;

import "google/protobuf/timestamp.proto";

option csharp_namespace = "Axorith.Contracts";

service DiagnosticsService {
  rpc GetHealth(HealthCheckRequest) returns (HealthCheckResponse);
}

message HealthCheckRequest {
  // Empty on purpose: reserved for future selector fields if needed.
}

message HealthCheckResponse {
  HealthStatus status = 1;
  string version = 2;
  google.protobuf.Timestamp uptime_started = 3;
  int32 active_sessions = 4;
  int32 loaded_modules = 5;
}

enum HealthStatus {
  HEALTHY = 0;
  DEGRADED = 1;
  UNHEALTHY = 2;
}